amplify push changes

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -50,6 +50,24 @@
       "service": "Lambda"
     }
   },
+  "parameters": {
+    "AMPLIFY_function_RokueFileUploadFunction_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "RokueFileUploadFunction"
+        }
+      ]
+    },
+    "AMPLIFY_function_RokueFileUploadFunction_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "RokueFileUploadFunction"
+        }
+      ]
+    }
+  },
   "storage": {
     "rokuStorage": {
       "dependsOn": [],
